- SCM strict route now fails closed on partial git/native-ref/status metadata, preventing partial SCM evidence from being treated as complete explicit SCM analysis.
- Image adapter extraction deepened:
- Deterministic header evidence now includes ISO PVD, VHD footer, VHDX signature, QCOW2 magic/version, and VMDK descriptor/sparse-magic hints.
- Package/installer signing evidence deepened:
- Deterministic local signing hints now include PE cert-table presence for `.exe` and signature-entry hints for `.msix/.nupkg/.whl/.jar`.
- New package reason code support: `PACKAGE_SIGNING_INFO_PRESENT` alongside existing unavailable paths.
- Container scan now emits adapter metadata/signals plus adapter artifacts using the same deterministic contract as safe-run adapters.
- Container scan evidence remains local-only inspect data and excludes unstable fields (timestamps/raw env/path values).
- Wave coverage now includes:
- Wave 1: archives, packages/installers, extensions
- Wave 2 baseline: IaC/CICD and document risk signal extraction
- Wave 3 baseline: container/source/signature/image evidence lanes
- Core/runtime trust hardening sweep applied in release scope (digest/trust/runtime path updates, host verification flow updates, and aligned fixture/contract updates).
- Builder integration surface explicitly supported: `weftend export-json <outRoot> --format normalized_v0` emits deterministic `weftend.normalizedSummary/0` output for downstream tools (see docs/POWERED_BY_WEFTEND.md).
- Shortcut scan accuracy fix for .lnk targets: report and compare now resolve the actual target script/program instead of effectively classifying the shell host.
- Baseline decision flow hardening for CHANGED/BLOCKED runs in Launchpad paths (accept/decline prompt reliability and gating behavior).
- Native report viewer workflow is the default operator path; Notepad is no longer the primary report UX.